Bug 1546521 - Removes unused variable sNewCertErrorPageEnabled r=jaws

Differential Revision: https://phabricator.services.mozilla.com/D28820